# docker-swarm-deploy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json
.github/workflows/: build.yml
src/: main.rs  middleware.rs
