[package]
name = "docker-swarm-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.3", features = ["map-request-body", "util"] }